--- a/0x02-Session_authentication/requirements.txt
+++ b/0x02-Session_authentication/requirements.txt
@@ -1,8 +1,16 @@
-Flask
-Flask-Cors
-Jinja2
-requests
-pycodestyle
-MarkupSafe
-itsdangerous
-Werkzeug
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==2.2.5
+Flask-Cors==4.0.1
+idna==3.7
+importlib-metadata==6.7.0
+itsdangerous==2.1.2
+jinja2==3.1.4
+MarkupSafe==2.1.5
+pycodestyle==2.10.0
+requests==2.31.0
+typing-extensions==4.7.1
+urllib3==2.0.7
+Werkzeug==2.2.3
+zipp==3.15.0
